@@ -23,6 +23,7 @@ Numberics         value (with a label), segment_length, circle_perimeter,
                   pt_ordinate, vector_abscissa, vector_ordinate, slope
 Angles            3pts (partially)
 Arcs              ok
+Locuses           ok
 Transformations   translation, central & line reflection, rotation
 Intersections     line-line, circle-circle, circle-line
 Scripts           as a label
@@ -41,19 +42,19 @@ Lines             pt_slope(*)
 Circle            radius(*)
 Numberics         distance_pt_line, distance_pt_circle
 Angles            vectors
-Locuses           at the moment not functional, depends on on_curve points
 Polygons          also in Kig
 Transformations   scaling(*)
 Intersections     arc-line (also in Kig)
 boundingBox       temporarily ignored
 
-(*) objects which depend on numeric's
+(*) objects which depend on numerics
 
 Known problems
 --------------
 
 * Angle(3pts): no label with measure
 * Point(On_curve): works only with segments, circles and arcs (I hope)
+* Locus(None): style attribute not taken into account
 
 Export
 ======
