@@ -1,3 +1,8 @@
+2004-05-03  Pino Toscano <toscano.pino@tiscali.it>
+
+	* More work on Dr. Geo filter: now locuses should work, fix object
+	visibility.
+
 2004-04-30  Pino Toscano <toscano.pino@tiscali.it>
 
 	* Add line and half-line by vector.
